Restructuring strings into HTML + schedule logic

--- a/app/templates/email-messages.xml
+++ b/app/templates/email-messages.xml
@@ -7,6 +7,7 @@
 Sikeresen regisztráltál a tippbajnokságra.
 
 Ha bármilyen kérdésed van, vagy valamilyen bugot találtál, akkor azokat elküldheted erre a címre, vagy írj a közös chat beszélgetésbe.
+Ha valamilyen szerver-probléma miatt nem tudod leadni a tipped, akkor erre a címre küldd el időben, és írd mellé a hibajelenséget.
 
 Üdvözlettel: A Tippmester
             </Content>
