--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -73,7 +73,11 @@
                                 {% with messages = get_flashed_messages() %}
                                 {% if messages %}
                                     {% for message in messages %}
-                                    {{message}}
+                                    {% if message == 'username_invalid' %}
+                                        Felhasználónév nem létezik.
+                                    {% elif message == 'password_invalid' %}
+                                        Hibás jelszó.
+                                    {% endif %} 
                                     {% endfor %}
                                 {% endif %}
                                 {% endwith %}
