--- a/app/templates/groupBet/final-odds.html
+++ b/app/templates/groupBet/final-odds.html
@@ -29,7 +29,7 @@
                     More Starters
                 </a>
             </div-->
-        </div-->
+        </div>
         <!-- ============================================================== -->
         <!-- End Bread crumb and right sidebar toggle -->
         <!-- ============================================================== -->
