--- a/app/templates/previous-bet/previous-day-match.html
+++ b/app/templates/previous-bet/previous-day-match.html
@@ -82,14 +82,22 @@
             <td>{{match.ID}}</td>
             <td style="text-align:center;">{{match.time}}</td>
             <td style="text-align:center;">{{match.team1}} - {{match.team2}}</td>
+        {% if match.result1 is none or match.result2 is none %}    
+            <td style="text-align:center;">Folyamatban</td>
+        {% else %}
             <td style="text-align:center;">{{match.result1}} - {{match.result2}}</td>
+        {% endif %}
             <td style="text-align:center;">{{match.type}}</td>
             <td style="text-align:center;">{{match.odd1}}</td>
             <td style="text-align:center;">{{match.oddX}}</td>
             <td style="text-align:center;">{{match.odd2}}</td>
             <td style="text-align:center;">{{match.goal1}}-{{match.goal2}}</td>
             <td style="text-align:center;">{{match.bet}}</td>
+        {% if (match.result1 is none or match.result2 is none) and match.bet > 0 %}
+            <td style="text-align:center;">Folyamatban</td>
+        {% else %}
             <td style="text-align:center;">{{match.prize|round(2)}} + {{match.bonus|round(2)}}</td>
+        {% endif %}
             <td style="text-align:center;">{{match.balance|round(2)}}</th>
         </tr>
 
