--- a/app/templates/hu/auth/modify.html
+++ b/app/templates/hu/auth/modify.html
@@ -11,31 +11,11 @@
 {% block content %}
 
     <div class="container-fluid">
-        <!-- ============================================================== -->
-        <!-- Bread crumb and right sidebar toggle -->
-        <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
                 <h3 class="text-themecolor m-b-0 m-t-0">Profil</h3>
-                <!--ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard</li>
-                </ol-->
             </div>
-            <!--div class="col-md-7 col-4 align-self-center">
-                <a target="_blank"
-                   href="https://appseed.us"
-                    class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down">
-                    More Starters
-                </a>
-            </div-->
         </div>
-        <!-- ============================================================== -->
-        <!-- End Bread crumb and right sidebar toggle -->
-        <!-- ============================================================== -->
-        <!-- ============================================================== -->
-        <!-- Start Page Content -->
-        <!-- ============================================================== -->
         <div class="row">
             <div class="col-12">
                 <div class="card">
@@ -47,19 +27,34 @@
                         <br>
                         <form class="form-horizontal form-material" method="POST">
 
+                            <form class="form-horizontal form-material" method="POST" id="registerForm">
+                                <div class="form-group">
+                                    <label class="col-md-12" id="langDisplay">Nyelv</label>
+                                    <div class="col-md-12">
+                                        <select type="text"
+                                               class="form-control form-control-line"
+                                               name="language"                                          
+                                               id = "langSelect"                                           
+                                               >
+                                               <option value="hu" {% if language == 'hu'%} selected="selected" {% endif %}>Magyar</option>
+                                               <option value="en" {% if language == 'en'%} selected="selected" {% endif %}>Angol</option>
+                                        </select>
+                                    </div>
+                                </div>
+
                             <div class="form-group" style="padding-left:1em;">
-                                <label class="form-group">Meccs-emlékeztetők emailben (meccskezdés előtt egy órával)</label>
+                                <label class="form-group">Meccsemlékeztetők emailben (a nap első meccsének kezdése előtt egy órával)</label>
 
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="reminder" id="exampleRadios1" value="0" {% if reminder == 0 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios1">
-                                        Azokon a meccsnapokon amelyiken van olyan meccs, amelyiknél nem lett megrakva tét, első meccs előtt egy órával.
+                                        Azokon a meccsnapokon amelyiken van olyan meccs, amelyiknél nem lett megrakva tét
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="reminder" id="exampleRadios2" value="1" {% if reminder == 1 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios2">
-                                        Minden meccsnap, az első meccs előtt 1 órával
+                                        Minden meccsnap
                                     </label>
                                 </div>
 
@@ -75,15 +70,16 @@
                                 <label class="form-group">Állásközlő email nap végén: </label>
 
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="summary" id="summaryRadios1" value="0" {% if summary == 0 %} checked {%endif%}>
-                                    <label class="form-check-label" for="summaryRadios1">
-                                        Nem kérek
-                                    </label>
-                                </div>
-                                <div class="form-check">
                                     <input class="form-check-input" type="radio" name="summary" id="summaryRadios2" value="1" {% if summary == 1 %} checked {%endif%}>
                                     <label class="form-check-label" for="summaryRadios2">
                                         Kérek
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="summary" id="summaryRadios1" value="0" {% if summary == 0 %} checked {%endif%}>
+                                    <label class="form-check-label" for="summaryRadios1">
+                                        Nem kérek
                                     </label>
                                 </div>
                             </div>
@@ -100,9 +96,6 @@
                 </div>
             </div>
         </div>
-        <!-- ============================================================== -->
-        <!-- End PAge Content -->
-        <!-- ============================================================== -->
     </div>
 
 {% endblock content %}
