--- a/app/templates/hu/group-bet/group-choose.html
+++ b/app/templates/hu/group-bet/group-choose.html
@@ -11,31 +11,11 @@
 {% block content %}
 
     <div class="container-fluid">
-        <!-- ============================================================== -->
-        <!-- Bread crumb and right sidebar toggle -->
-        <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
                 <h3 class="text-themecolor m-b-0 m-t-0">Csoportkör-fogadások</h3>
-                <!--ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard</li>
-                </ol-->
             </div>
-            <!--div class="col-md-7 col-4 align-self-center">
-                <a target="_blank"
-                   href="https://appseed.us"
-                    class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down">
-                    More Starters
-                </a>
-            </div-->
         </div>
-        <!-- ============================================================== -->
-        <!-- End Bread crumb and right sidebar toggle -->
-        <!-- ============================================================== -->
-        <!-- ============================================================== -->
-        <!-- Start Page Content -->
-        <!-- ============================================================== -->
         <div class="row">
             <div class="col-12">
                 <div class="card">
@@ -54,61 +34,20 @@
                 </div>
             </div>
         </div>
-        <!-- ============================================================== -->
-        <!-- End PAge Content -->
-        <!-- ============================================================== -->
     </div>
 
 {% endblock content %}
 
 {% block javascripts %}
-<script type="module">
-    var resultNamemap = {
-        "0" : "Győztes",
-        "1" : "Döntős",
-        "2" : "Elődöntős",
-        "3" : "Csoporkörön túl"
-    }
-    var listSelector = document.getElementById("players");
 
-    window.onload = function() {
-        askPlayerPreviousBets(String(listSelector.value));
-    }
+{% set champion = 'Bajnok' %}
+{% set finalist = 'Döntős' %}
+{% set semi_final = 'Elődöntős' %}
+{% set knockout = 'Csoportkörön túl' %}
 
-    var betMap = new Map();
+{% set load_in_progress = 'Betöltés folyamatban...' %}
+{% set load_timeout = 'Megszakadt a kapcsolat a kiszolgálóval!' %}
 
-    var resultNode = document.getElementById("resultNode");
+{% include "common/group_choose.js" %}
 
-    function askPlayerPreviousBets(nameID) {
-        console.log("Map doesn't contain the key: " + nameID);
-
-        var resultRequest = new XMLHttpRequest();
-        resultRequest.open("GET", "./group?name=" +nameID);
-        
-        resultRequest.onload = function() {
-            resultNode.innerHTML = resultRequest.response;
-            betMap.set(nameID, resultRequest.response);
-
-            var result = document.getElementById("resultID");
-            result.innerText = resultNamemap[result.innerText];
-        }
-
-        resultRequest.ontimeout = function() {
-            resultNode.innerHTML = "Megszakadt a kapcsolat a kiszolgálóval!";
-        }
-
-        resultRequest.send();
-    }
-    
-    listSelector.onchange = function() {
-        if (betMap.get(this.value) == null) {
-            resultNode.innerHTML = "Betöltés folyamatban...";
-            askPlayerPreviousBets(this.value);
-        }
-        else {
-            resultNode.innerHTML = betMap.get(this.value);
-        }
-    }
-
-</script>
 {% endblock javascripts %}
