--- a/app/templates/en/layouts/base-fullscreen.html
+++ b/app/templates/en/layouts/base-fullscreen.html
@@ -13,7 +13,7 @@
     <meta name="robots" content="noindex,nofollow">
 
     <title>
-        Tippbajnokság - {% block title %}{% endblock %} | Margitai Péter
+        Betting Competition - {% block title %}{% endblock %} | Margitai Péter
     </title>
 
     <!-- Favicon icon -->
