--- a/app/templates/en/layouts/base-unsigned.html
+++ b/app/templates/en/layouts/base-unsigned.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex,nofollow">
 
     <title>
-        Tippbajnokság - {% block title %}{% endblock %} | Margitai Péter
+        Betting Competition - {% block title %}{% endblock %} | Margitai Péter
     </title>
 
     <!-- Favicon icon -->
@@ -57,11 +57,7 @@
         {% include language + '/includes/navigation.html' %}        
 
         <div class="page-wrapper">
-
             {% block content %}{% endblock content %}
-
-            {# % include language + '/includes/footer.html' % #}
-
         </div>
 
     </div>
