--- a/app/templates/hu/group-bet/group-after.html
+++ b/app/templates/hu/group-bet/group-after.html
@@ -26,7 +26,7 @@
 <br>
 {% for group_container in group_containers %}
 <h4>
-    {{group_container.ID}}. csoport:
+    {{group_container.ID}} csoport:
 </h4>
 
 <div style="padding-left: 1em;">
