--- a/app/templates/en/admin/upload-team-data.html
+++ b/app/templates/en/admin/upload-team-data.html
@@ -11,7 +11,7 @@
     <div class="container-fluid">
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Csapatleíró- és fordításfáj feltöltése</h3>
+                <h3 class="text-themecolor m-b-0 m-t-0">Upload team description and translation files</h3>
             </div>
         </div>
         <div class="row">
@@ -26,11 +26,11 @@
                             {% endif %}
                         {% endwith %}
 
-                        <h2>Fájlok feltöltése</h2>
+                        <h2>Upload files</h2>
                         <form method=post enctype=multipart/form-data>
-                            <label for="team">Csapatleíró</label>
+                            <label for="team">Team description</label>
                             <input type=file name=team id="team"><br>
-                            <label for="translation">Csapatnév-fordítás</label>
+                            <label for="translation">Team translation</label>
                             <input type=file name=translation id="translation"><br>
                             <input type=submit value=Feltöltés>
                         </form>
