--- a/app/templates/en/auth/modify.html
+++ b/app/templates/en/auth/modify.html
@@ -21,71 +21,71 @@
                 <div class="card">
                     <div class="card-block">
                         
-                        <div>Becenév/Felhasználónév: {{g.user.username}}</div>
+                        <div>Nickname/Username: {{g.user.username}}</div>
                         <div>Email: {{email}}</div>
                         <br>
                         <form class="form-horizontal form-material" method="POST">
 
                             <form class="form-horizontal form-material" method="POST" id="registerForm">
                                 <div class="form-group">
-                                    <label class="col-md-12" id="langDisplay">Nyelv</label>
+                                    <label class="col-md-12" id="langDisplay">Language</label>
                                     <div class="col-md-12">
                                         <select type="text"
                                                class="form-control form-control-line"
                                                name="language"                                          
                                                id = "langSelect"                                           
                                                >
-                                               <option value="hu" {% if language == 'hu'%} selected="selected" {% endif %}>Magyar</option>
-                                               <option value="en" {% if language == 'en'%} selected="selected" {% endif %}>Angol</option>
+                                               <option value="hu" {% if language == 'hu'%} selected="selected" {% endif %}>Hungarian</option>
+                                               <option value="en" {% if language == 'en'%} selected="selected" {% endif %}>English</option>
                                         </select>
                                     </div>
                                 </div>
 
                             <div class="form-group" style="padding-left:1em;">
-                                <label class="form-group">Meccsemlékeztetők emailben (a nap első meccsének kezdése előtt egy órával)</label>
+                                <label class="form-group">Match reminder emails (1 hour before the starting of the first match)</label>
 
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="reminder" id="exampleRadios1" value="0" {% if reminder == 0 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios1">
-                                        Azokon a meccsnapokon amelyiken van olyan meccs, amelyiknél nem lett megrakva tét
+                                        On those days when there is a match without a bet
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="reminder" id="exampleRadios2" value="1" {% if reminder == 1 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios2">
-                                        Minden meccsnap
+                                        Every matchday
                                     </label>
                                 </div>
 
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="reminder" id="exampleRadios3" value="2" {% if reminder == 2 %} checked {%endif%}>
                                     <label class="form-check-label" for="exampleRadios3">
-                                        Nem kérek emlékeztetőt
+                                        I don't want to receive reminders
                                     </label>
                                 </div>
                             </div>
 
                             <div class="form-group" style="padding-left:1em;">
-                                <label class="form-group">Állásközlő email nap végén: </label>
+                                <label class="form-group">Standing notification email at the end of matchdays</label>
 
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="summary" id="summaryRadios2" value="1" {% if summary == 1 %} checked {%endif%}>
                                     <label class="form-check-label" for="summaryRadios2">
-                                        Kérek
+                                        Yes
                                     </label>
                                 </div>
 
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="summary" id="summaryRadios1" value="0" {% if summary == 0 %} checked {%endif%}>
                                     <label class="form-check-label" for="summaryRadios1">
-                                        Nem kérek
+                                        No
                                     </label>
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                    <button class="btn btn-success">Módosít</button>
+                                    <button class="btn btn-success">Modify</button>
                                 </div>
                             </div>
 
