--- a/app/templates/en/group-bet/final-odds.html
+++ b/app/templates/en/group-bet/final-odds.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Végsőtipp-szorzók</h3>
+                <h3 class="text-themecolor m-b-0 m-t-0">Odds for final result bet</h3>
             </div>
         </div>
 
@@ -24,7 +24,7 @@
 
                         <table style="width:100%;margin-left:20px;">
                             <tr>
-                                <th rowspan="1" style="width: 34%;text-align:left;">Csapat</th>
+                                <th rowspan="1" style="width: 34%;text-align:left;">Team</th>
                                 <th rowspan="1" style="width: 16%;text-align:center;">Top1</th>
                                 <th rowspan="1" style="width: 16%;text-align:center;">Top2</th>
                                 <th rowspan="1" style="width: 16%;text-align:center;">Top4</th>
