--- a/app/templates/en/group-bet/group-edit.html
+++ b/app/templates/en/group-bet/group-edit.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Csoportkör-fogadások</h3>
+                <h3 class="text-themecolor m-b-0 m-t-0">Group bets</h3>
             </div>
         </div>
         <script src="https://sortablejs.github.io/Sortable/Sortable.js"></script>
@@ -22,28 +22,28 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-block">
-                        <div>Kezdőtőke: {{start_amount}}</div>
+                        <div>Staring bet credit amount: {{start_amount}}</div>
 
                         <div>
-                            <div style="display: inline-block;">Végeredmény-tipp:</div>
+                            <div style="display: inline-block;">Final result bet :</div>
 
                             <select name="teamSelect" id="teamSelect" style="display: inline-block;"> </select>
                             <select name="resultSelect" id="resultSelect" style="display: inline-block;"> </select>
-                            <label for="finalResultOdd" style="padding-left: 1em;">Szorzó: </label>
+                            <label for="finalResultOdd" style="padding-left: 1em;">Odd: </label>
                             <div id="finalResultOdd" style="display: inline-block;"></div>
-                            <a href="./final-odds">(táblázatos forma)</a>
+                            <a href="./final-odds">(tabular form)</a>
 
-                            <label for="finalResultBet" style="padding-left: 1em;">Tét: </label>
+                            <label for="finalResultBet" style="padding-left: 1em;">Bet: </label>
                             <input id="finalResultBet" style="display: inline-block;" type="number" min="0" max="200" size="3" value="{{final_bet.betting_amount}}">
 
-                            <label for="expectedWinAmount" style="padding-left: 1em;">Várható nyeremény:</label>
+                            <label for="expectedWinAmount" style="padding-left: 1em;">Expected prize: </label>
                             <div style="display: inline-block;" id="expectedWinAmount"> </div>
                         </div>                        
                         
-                        <div>Vonszolással állítsd be a csoportok sorrendjét!</div>
+                        <div>Set the order of the group by dragging!</div>
                         {% for group in groups %}
                             <div id="{{group.ID}}" class="row" style="width: 26em;">
-                                <h4 class="col-12" style="display:inline;">{{group.ID}} csoport</h4>
+                                <h4 class="col-12" style="display:inline;">Group - {{group.ID}}</h4>
 
                                 <div id="example4-left" class="list-group col" style="padding-left: 1em; width: 1px;">
                                     <!--div class="list-group-item" style="background-color: #b8b8b8;">Végeredmény</div-->
@@ -66,21 +66,21 @@
                                 </div>
                             </div> 
 
-                            <label for="bet-{{group.ID}}" style="padding-left: 3em; padding-top: 1em;">Tét:</label>
+                            <label for="bet-{{group.ID}}" style="padding-left: 3em; padding-top: 1em;">Bet: </label>
                             <input type="number" size="3" value="{{group.bet_property.amount}}" id="bet-{{group.ID}}" name="bet-{{group.ID}}" min=0 max={{max_group_bet_value}} oninput="calculateRemainingBetAmount()">
                             <br>
                         {% endfor %}
 
                         <div>
-                            <div style="display: inline-block;">Fennmaradő tőke:</div>
-                            <div style="display: inline-block;" id="remainingAmount">0 tallér</div>
+                            <div style="display: inline-block;">Remaining bet credit amount: </div>
+                            <div style="display: inline-block;" id="remainingAmount">0 credit</div>
                         </div>
 
                         <div style="padding-left:1em; color:red;" id="errorMessage">
                             
                         </div>
 
-                        <button type="button" id="sendButton">Beküld</button> 
+                        <button type="button" id="sendButton">Send</button> 
                         
                     </div>
                 </div>
@@ -91,20 +91,20 @@
 {% endblock content %}
 
 {% block javascripts %}
-    {% set champion = 'Bajnok' %}
-    {% set finalist = 'Döntős' %}
-    {% set semi_final = 'Elődöntős' %}
-    {% set knockout = 'Csoportkörön-túl' %}
+    {% set champion = 'Champion' %}
+    {% set finalist = 'Finalist' %}
+    {% set semi_final = 'Semi-finalist' %}
+    {% set knockout = 'Knockout-stage' %}
 
-    {% set final_team = 'A végső tippnél megadott csapat nem létezik.' %}
-    {% set final_result = 'Hibás végsőtipp eredmény.' %}
-    {% set final_bet_message = 'Hibás végsőtipp fogadási mennyiség.' %}
-    {% set group_bet = 'Hibás fogadási mennyiség a csoportkörtippnél.' %}
-    {% set group_id = 'Hibás csoport azonosító.' %}
-    {% set group_team = 'Hibás csapatnév a csoportkörnél.' %}
+    {% set final_team = 'Invalid team for final result bet.' %}
+    {% set final_result = 'Invalid final result bet.' %}
+    {% set final_bet_message = 'Invalid bet amount at final result bet.' %}
+    {% set group_bet = 'Invalid bet amount at group bet.' %}
+    {% set group_id = 'Invalid group id.' %}
+    {% set group_team = 'Invalid team name at the group bet.' %}
     
-    {% set bet_unit = 'tallér' %}
-    {% set communication_error = 'Hiba történt a szerverrel való kommunikációban.' %}
+    {% set bet_unit = 'credit' %}
+    {% set communication_error = 'Error communicating with the server.' %}
 
     {% include "/common/group_edit.js" %}
 
