--- a/app/templates/en/includes/sidebar.html
+++ b/app/templates/en/includes/sidebar.html
@@ -1,55 +1,30 @@
 <aside class="left-sidebar">
-    <!-- Sidebar scroll-->
     <div class="scroll-sidebar">
-        <!-- Sidebar navigation-->
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
                 <li> <a class="waves-effect waves-dark" href="/" aria-expanded="false"><i
-                            class="mdi mdi-soccer"></i><span class="hide-menu">Fogadás</span></a>
+                            class="mdi mdi-soccer"></i><span class="hide-menu">Betting</span></a>
                 </li>
-                <li> <a class="waves-effect waves-dark" href="/prev" aria-expanded="false"><i
-                            class="mdi mdi-content-paste"></i><span class="hide-menu">Korábbi fogadások</span></a>
+                <li> <a class="waves-effect waves-dark" href="/previous-bets" aria-expanded="false"><i
+                            class="mdi mdi-content-paste"></i><span class="hide-menu">Previous bets</span></a>
                 </li>
                 <li> <a class="waves-effect waves-dark" href="/group" aria-expanded="false"><i
-                            class="mdi mdi-table"></i><span class="hide-menu">Csoportkör-fogadások</span></a>
+                            class="mdi mdi-table"></i><span class="hide-menu">Group betting</span></a>
                 </li>
                 <li> <a class="waves-effect waves-dark" href="/standings" aria-expanded="false"><i
-                            class="mdi mdi-chart-line"></i><span class="hide-menu">Pontverseny állása</span></a>
+                            class="mdi mdi-chart-line"></i><span class="hide-menu">Standings</span></a>
                 </li>
                 {% if g.user.admin %}
                 <li> <a class="waves-effect waves-dark" href="/admin" aria-expanded="false"><i
                             class="mdi mdi-account"></i><span class="hide-menu">Admin</span></a>
                 {% endif %}
                 </li>
-                <!--li> <a class="waves-effect waves-dark" href="/page-blank.html" aria-expanded="false"><i
-                            class="mdi mdi-book-open-variant"></i><span class="hide-menu">Blank Page</span></a>
-                </li>
-                <li> <a class="waves-effect waves-dark" href="/page-404.html" aria-expanded="false"><i
-                            class="mdi mdi-help-circle"></i><span class="hide-menu">Error 404</span></a-->
                 </li>
                 <li> <a class="waves-effect waves-dark" href="/logout" aria-expanded="false"><i
-                            class="mdi mdi-power"></i><span class="hide-menu">Kijelentkezés</span></a>
+                            class="mdi mdi-power"></i><span class="hide-menu">Sign-out</span></a>
                 </li>
             </ul>
-
-            <!--div class="text-center m-t-30">
-                <a target="_blank"
-                   href="https://appseed.us"
-                   class="btn waves-effect waves-light btn-warning hidden-md-down">More Starters</a>
-            </div-->
-
         </nav>
-        <!-- End Sidebar navigation -->
     </div>
-    <!-- End Sidebar scroll-->
-    <!-- Bottom points-->
-    <!--div class="sidebar-footer">
-        <a href="/page-profile.html" class="link" data-toggle="tooltip" title="Settings"><i
-                class="ti-settings"></i></a>
-        <a href="/" class="link" data-toggle="tooltip" title="Email"><i
-                class="mdi mdi-gmail"></i></a>
-        <a href="/login.html" class="link" data-toggle="tooltip" title="Logout"><i
-                class="mdi mdi-power"></i></a> </div-->
-    <!-- End Bottom points-->
 </aside>
 
