--- a/app/templates/en/layouts/base.html
+++ b/app/templates/en/layouts/base.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex,nofollow">
 
     <title>
-        Tippbajnokság - {% block title %}{% endblock %}
+        Betting Competition - {% block title %}{% endblock %}
     </title>
 
     <!-- Favicon icon -->
@@ -30,12 +30,6 @@
     <link href="/static/assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
     <link href="/static/assets/css/colors/blue.css" id="theme" rel="stylesheet">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
     <!-- Specific Page CSS goes HERE  -->
     {% block stylesheets %}{% endblock stylesheets %}
@@ -43,10 +37,6 @@
 </head>
 
 <body class="fix-header fix-sidebar card-no-border">
-
-    <!-- ============================================================== -->
-    <!-- Preloader - style you can find in spinners.css -->
-    <!-- ============================================================== -->
     <div class="preloader">
         <svg class="circular" viewBox="25 25 50 50">
             <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" /> </svg>
@@ -59,18 +49,13 @@
         {% include language + '/includes/sidebar.html' %}
 
         <div class="page-wrapper">
-
             {% block content %}{% endblock content %}
-
-            {# % include language + 'includes/footer.html' % #}
-
         </div>
 
     </div>
 
     {% include language + '/includes/scripts.html' %}
 
-    <!-- Specific Page JS goes HERE  -->
     {% block javascripts %}{% endblock javascripts %}
 
 </body>
