--- a/app/templates/en/page-403.html
+++ b/app/templates/en/page-403.html
@@ -15,8 +15,8 @@
             
             <div class="error-body text-center">
                 <h1>403</h1>
-                <h3 class="text-uppercase">Hozzáférés megtagadva</h3>
-                <p class="text-muted m-t-30 m-b-30">Nincs jogosultságod ezt az oldalt megtekinteni.</p>
+                <h3 class="text-uppercase">Access denied</h3>
+                <p class="text-muted m-t-30 m-b-30">You don't have the proper privileges to see this page.</p>
                 <a href="/login.html" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Login</a>
             </div>            
         </div>
