--- a/app/templates/en/page-404.html
+++ b/app/templates/en/page-404.html
@@ -1,6 +1,6 @@
 {% extends language + "/layouts/base-fullscreen.html" %}
 
-{% block title %} Page 403 {% endblock %} 
+{% block title %} Page 404 {% endblock %} 
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
@@ -9,15 +9,14 @@
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
-
     <section id="wrapper" class="error-page">
         <div class="error-box">
             
             <div class="error-body text-center">
-                <h1>403</h1>
-                <h3 class="text-uppercase">Hozzáférés megtagadva</h3>
-                <p class="text-muted m-t-30 m-b-30">Nincs jogosultságod ezt az oldalt megtekinteni.</p>
-                <a href="/login.html" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Login</a>
+                <h1>404</h1>
+                <h3 class="text-uppercase">The page cannot be found!</h3>
+                <p class="text-muted m-t-30 m-b-30">You are probably at the wrong place.</p>
+                <a href="/" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Homepage</a>
             </div>            
         </div>
     </section>
