--- a/app/templates/hu/group-bet/group-during.html
+++ b/app/templates/hu/group-bet/group-during.html
@@ -18,11 +18,11 @@
 {% for group in groups %}
 
 {% if group.bets|length == 0 %}
-    <h4 class="col-12">{{group.ID}}. csoport: A játékos nem fogadott a csoportra</h4>
+    <h4 class="col-12">{{group.ID}} csoport: A játékos nem fogadott a csoportra</h4>
 {% else %}
 
 <div id="sorting-disabled" class="row" style="width: 30em;padding-left: 1em;">
-    <h4 class="col-12">{{group.ID}}. csoport: Tét - {{group.bet_property.amount}} tallér</h4>
+    <h4 class="col-12">{{group.ID}} csoport: Tét - {{group.bet_property.amount}} tallér</h4>
     <div id="example4-left" class="list-group col" style="padding-left: 2em;">
         <div class="list-group-item" style="background-color: #b8b8b8;">Tipp</div>
 
