--- a/app/templates/en/group-bet/final-odds.html
+++ b/app/templates/en/group-bet/final-odds.html
@@ -24,11 +24,11 @@
 
                         <table style="width:100%;margin-left:20px;">
                             <tr>
-                                <th rowspan="1" style="width: 34%;text-align:left;">Team</th>
-                                <th rowspan="1" style="width: 16%;text-align:center;">Top1</th>
-                                <th rowspan="1" style="width: 16%;text-align:center;">Top2</th>
-                                <th rowspan="1" style="width: 16%;text-align:center;">Top4</th>
-                                <th rowspan="1" style="width: 16%;text-align:center;">Top16</th>
+                                <th rowspan="1" style="width: 25%;text-align:left;">Team</th>
+                                <th rowspan="1" style="width: 16%;text-align:center;">Champion</th>
+                                <th rowspan="1" style="width: 16%;text-align:center;">Finalist</th>
+                                <th rowspan="1" style="width: 16%;text-align:center;">Semi-finalst</th>
+                                <th rowspan="1" style="width: 16%;text-align:center;">Knockout-stage</th>
                             </tr>
                     
                             {% for team in teams %}
@@ -45,6 +45,11 @@
                                 <td style="text-align:center;">{{team.top4}}</td>
                                 <td style="text-align:center;">{{team.top16}}</td>
                             </tr>
+
+                            {% if loop.index % 4 == 0 %}
+                            <tr><td><br></td></tr>
+                            {% endif %}
+
                             {% endfor %}
                         </table>
                     </div>
