--- a/app/templates/hu/previous-bet/previous-day-match.html
+++ b/app/templates/hu/previous-bet/previous-day-match.html
@@ -63,7 +63,7 @@
                 {% set background = 'white' %}   
 
                 {% if match.bet_result == 1 %}
-                    {% set background = '#FF7070' %}
+                    {% set background = '#FFAAAA' %}
                 {% elif match.bet_result == 2 %}
                     {% set background = '#00FF00' %}
                 {% endif %}
@@ -71,7 +71,7 @@
                 {% set background = '#E8E8E8' %}
 
                 {% if match.bet_result == 1 %}
-                    {% set background = '#ff9090' %}
+                    {% set background = '#FFCCCC' %}
                 {% elif match.bet_result == 2 %}
                     {% set background = '#80ff80' %}
                 {% endif %}
