--- a/app/templates/results/results-user.html
+++ b/app/templates/results/results-user.html
@@ -55,11 +55,11 @@
 </div>
     {% endfor %}
 
-    {%if day.date == group_evaluation_date %}
+    {% if day.date == group_evaluation_date %}
 <div class="container row d-flex align-items-center">
-    <p class="col-3 d-flex align-items-center justify-content-center badge bg-info">{% trans %}Group bet total prize{% endtrans %}: {{extra_data.group_bonus|round(1)}}</p>
+    <p class="col-3 d-flex align-items-center justify-content-center badge bg-info">{% trans %}Group bet total prize{% endtrans %}: {{extra_data.group_bonus|d_round('?')}}</p>
     <div class="col-1"></div>
-    <p class="col-3 justify-content-center badge bg-info">{% trans %}Balance after group bonus{% endtrans %}: {{extra_data.balance_after_group|round(1)}}</p>
+    <p class="col-3 justify-content-center badge bg-info">{% trans %}Balance after group bonus{% endtrans %}: {{extra_data.balance_after_group|d_round('?')}}</p>
 </div>
     {% endif %}
 
