--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -10,14 +10,14 @@
         <thead>
         <tr>
             <th scope="col">{% trans %}Name{% endtrans %}</th>
-            <th scope="col">{% trans %}Bet count{% endtrans %}</th>
-            <th scope="col">{% trans %}Hit count{% endtrans %}</th>
-            <th scope="col">{% trans %}Hit ratio{% endtrans %}</th>                        
-            <th scope="col">{% trans %}Bullseye count{% endtrans %}</th>
-            <th scope="col">{% trans %}Bullseye ratio{% endtrans %}</th>
-            <th scope="col">{% trans %}Max winning streak{% endtrans %}</th>
-            <th scope="col">{% trans %}Max bullseye streak{% endtrans %}</th>
-            <th scope="col">{% trans %}Max loosing streak{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Bet count{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Hit count{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Hit ratio{% endtrans %}</th>                        
+            <th scope="col" class="align-middle text-center">{% trans %}Bullseye count{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Bullseye ratio{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Max winning streak{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Max bullseye streak{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Max loosing streak{% endtrans %}</th>
         </tr>
         </thead>
         
@@ -45,17 +45,17 @@
     <table class="table">
         <thead>
         <tr>
-            <th scope="col">{% trans %}ID{% endtrans %}</th>
-            <th scope="col">{% trans %}Date{% endtrans %}</th>
-            <th scope="col">{% trans %}Teams{% endtrans %}</th>
-            <th scope="col">{% trans %}Bet count{% endtrans %}</th>
-            <th scope="col">{% trans %}Hit count{% endtrans %}</th>
-            <th scope="col">{% trans %}Hit ratio{% endtrans %}</th>
-            <th scope="col">{% trans %}Total bet credit{% endtrans %}</th>
-            <th scope="col">{% trans %}Normalized total bet credit{% endtrans %}</th>
-            <th scope="col">{% trans %}Sum credit difference{% endtrans %}</th>
-            <th scope="col">{% trans %}Normalized sum credit difference{% endtrans %}</th>
-            <th scope="col">{% trans %}Difference / total credit{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}ID{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Date{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Teams{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Bet count{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Hit count{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Hit ratio{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Total bet credit{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Normalized total bet credit{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Sum credit difference{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Normalized sum credit difference{% endtrans %}</th>
+            <th scope="col" class="align-middle text-center">{% trans %}Difference / total credit{% endtrans %}</th>
         </tr>
         </thead>
         <tbody>
